--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Iniciar sesión</title>
-    
+    <script src="/JS/script.js"></script>
     <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
@@ -19,7 +19,7 @@
                 <label for="password">Contraseña:</label>
                 <input type="password" id="password" name="password" required>
             </div>
-            <button type="submit">Iniciar sesión</button>
+            <button id="login-button" type="submit">Iniciar sesión</button>
         </form>
     </div>
     
