--- a/Ventanas/Login.html
+++ b/Ventanas/Login.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Iniciar sesión</title>
-    <script src="/JS/script.js"></script>
-    <link rel="stylesheet" href="CSS/style.css">
+    <script src="/JS/LoginScript.js"></script>
+    <link rel="stylesheet" href="/CSS/LoginStyle.css">
 </head>
 <body>
-    <img src="resourses/logo_cuevas.png" alt="Logo de la empresa" class="logo">
+    <img src="/resourses/logo_cuevas.png" alt="Logo de la empresa" class="logo">
     <div class="contenido">
         <h1>Iniciar sesión</h1>
         <form id="loginForm">
