MAIN DASHBOARD 100% falta funcionalidad con la API

--- a/Ventanas/CLI_MainDashboard.html
+++ b/Ventanas/CLI_MainDashboard.html
@@ -9,12 +9,26 @@
 <body>
     <header>
         <img src="/resourses/logo_cuevas.png" alt="Logo de la empresa" class="logo">
+        <div class="header-buttons">
+            <div class="header-info">
+                <label id="user-label"></label>
+            </div>
+            <br>
+            <button onclick="buttonFuncionalityRegisteraddress()">Registrar dirección de entrega</button>
+            <br>
+            <button onclick="buttonFuncionalityRegisterPaymentMethod()">Registrar método de pago</button>
+        </div>
+
     </header>
     <div class="content">
+        <div class="cart-info">
+            <img src="/resourses/cart_icon.png" alt="Icono de carrito" class="cart-icon">
+            <label id="cantidad_carrito"></label>
+        </div>
         <div class="tab-control">
             <button class="tab-button active" onclick="openTab(event, 'catalogo')">Catalogo de productos</button>
             <button class="tab-button" onclick="openTab(event, 'carrito')">Carrito de compras</button>
-            <button class="tab-button" onclick="openTab(event, 'visualizar')">Visualizar Pedidos realizados</button>
+            <button class="tab-button" onclick="openTab(event, 'visualizar')">Visualizar Pedidos</button>
         </div>
 
         <div id="catalogo" class="tab-content active">
@@ -32,6 +46,17 @@
         <div id="carrito" class="tab-content">
             <h2>lista del carrito de compras</h2>
             <br>
+            <div id="div_carrito_info" class="carrito-info">
+                <div class="carrito-details">
+                    <label id="carrito-cantidad-label">Cantidad de articulos: 0</label>
+                    <label id="carrito-total-label">Total a pagar: $0.00</label>
+                </div>
+                <div class="carrito-buttons">
+                    <button onclick="payCar()">Pagar</button>
+                    <button onclick="deleteAllcar()">Borrar Carrito</button>
+                </div>
+            </div>
+            <br>
             <div id="div_resultadosProductosCarrito" class="resultadosProductosCarrito">
                 <div class="tarjeta-contenedorProductosCarrito"></div>
             </div>
@@ -41,7 +66,7 @@
             <h2>Visualizar Pedidos realizados</h2>
             <br>
             <div id="div_resultadosProductoshistorial" class="resultadosProductosHistorial">
-                <div class="tarjeta-contenedorProductosCarrito"></div>
+                <div class="tarjeta-contenedorProductosHistorial"></div>
             </div>
         </div>
     </div>
