--- a/Ventanas/Login.html
+++ b/Ventanas/Login.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Iniciar sesión</title>
-    <script src="/JS/LoginScript.js"></script>
-    <link rel="stylesheet" href="/CSS/LoginStyle.css">
+    <script src="../JS/LoginScript.js"></script>
+    <link rel="stylesheet" href="../CSS/LoginStyle.css">
 </head>
 <body>
-    <img src="/resourses/logo_cuevas.png" alt="Logo de la empresa" class="logo">
+    <div class="Backgrountlogo">
+        <img src="../resourses/logo_cuevas.png" alt="Logo de la empresa" class="logo">
+    </div>
     <div class="contenido">
         <h1>Iniciar sesión</h1>
         <form id="loginForm">
@@ -19,8 +21,10 @@
                 <label for="password">Contraseña:</label>
                 <input type="password" id="password" name="password" required>
             </div>
-            <button id="login-button" type="submit">Iniciar sesión</button>
+            
         </form>
+        <button onclick="loginbutton()">Iniciar Sesion</button>
+        <button onclick="registerButton()">Registrarse</button>
     </div>
     
 </body>
