--- a/Ventanas/CLI_MainDashboard.html
+++ b/Ventanas/CLI_MainDashboard.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Abarrotes Cuevas</title>
-    <link rel="stylesheet" href="/CSS/CLI_MainDStyle.css">
-    <script src="/JS/CLI_MainDashboardScript.js"></script>
+    <link rel="stylesheet" href="../CSS/CLI_MainDStyle.css">
+    <script src="../JS/CLI_MainDashboardScript.js"></script>
 </head>
 <body>
     <header>
-        <img src="/resourses/logo_cuevas.png" alt="Logo de la empresa" class="logo">
+        <img src="../resourses/logo_cuevas.png" alt="Logo de la empresa" class="logo">
         <div class="header-buttons">
             <div class="header-info">
                 <label id="user-label"></label>
@@ -22,7 +22,7 @@
     </header>
     <div class="content">
         <div class="cart-info">
-            <img src="/resourses/cart_icon.png" alt="Icono de carrito" class="cart-icon">
+            <img src="../resourses/cart_icon.png" alt="Icono de carrito" class="cart-icon">
             <label id="cantidad_carrito"></label>
         </div>
         <div class="tab-control">
