--- a/Ventanas/ClientRegister.html
+++ b/Ventanas/ClientRegister.html
@@ -2,16 +2,16 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Registro de Usuario</title>
-    <link rel="stylesheet" href="/CSS/ClientRGStyle.css">
-    <script src="/JS/ClientRegisterScript.js"></script>
+    <title>Registro de Cliente</title>
+    <link rel="stylesheet" href="../CSS/ClientRGStyle.css">
+    <script src="../JS/ClientRegisterScript.js"></script>
 </head>
 <body>
     <header>
         <div class="header-info">
-            <img class="logo" src="/resourses/logo_cuevas.png" alt="Logo">
+            <img class="logo" src="../resourses/logo_cuevas.png" alt="Logo">
             <div>
-                <h1>Registro de Usuario</h1>
+                <h1>Registro de Cliente</h1>
                 <h2>Bienvenido/a</h2>
             </div>
         </div>
@@ -24,7 +24,7 @@
         <input type="date" id="birthdate" required><br><br>
         
         <label for="phoneNumber">Número de teléfono:</label>
-        <input type="tel" id="phoneNumber" required><br><br>
+        <input type="tel" id="phoneNumber" inputmode="numeric" maxlength="10" required><br><br>
         
         <label for="password">Contraseña:</label>
         <input type="password" id="password" required><br><br>
