--- a/Ventanas/ProductDetails.html
+++ b/Ventanas/ProductDetails.html
@@ -2,33 +2,12 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Main Dashboard</title>
-    <link rel="stylesheet" href="../CSS/style.css">
+    <title>Product Datails</title>
+    <link rel="stylesheet" href="../CSS/ProductDtStyle.css">
 </head>
 <body>
     <header>
-        <h1>Abarrotes Cuevas</h1>
-        <div class="header-buttons">
-            <button class="profile-button">Perfil</button>
-            <button class="logout-button">Cerrar Sesión</button>
-        </div>
-    </header>
-    <div class="content">
-        <div class="tab-control">
-            <button class="tab-button active" onclick="openTab(event, 'carrito')">Carrito</button>
-            <button class="tab-button" onclick="openTab(event, 'pedidos')">Pedidos Solicitados</button>
-            <button class="tab-button" onclick="openTab(event, 'catalogo')">Catálogo de Productos</button>
-        </div>
-        <div id="carrito" class="tab-content">
-            <h2>Contenido del Carrito</h2>
-        </div>
-        <div id="pedidos" class="tab-content">
-            <h2>Pedidos Solicitados</h2>
-        </div>
-        <div id="catalogo" class="tab-content">
-            <h2>Catálogo de Productos</h2>
-        </div>
-    </div>
-    <script src="script.js"></script>
+        <h1>Detalles del producto</h1>
+    <script src="../JS/ProductDetailsScript.js"></script>
 </body>
 </html>
