--- a/Ventanas/IncidentReport.html
+++ b/Ventanas/IncidentReport.html
@@ -3,32 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <title>Main Dashboard</title>
-    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="stylesheet" href="../CSS/IncidentRPStyle.css">
+    <script src="../JS/IncidentReportScript.js"></script>
 </head>
 <body>
     <header>
-        <h1>Abarrotes Cuevas</h1>
+        <img src="../resourses/logo_cuevas.png" alt="Logo de la empresa" class="logo">
         <div class="header-buttons">
-            <button class="profile-button">Perfil</button>
-            <button class="logout-button">Cerrar Sesión</button>
+            <div class="header-info">
+                <label id="user-label"></label>
+            </div>
+            <br>
+            <button onclick="buttonFuncionalityRegisteraddress()">Registrar dirección de entrega</button>
+            <br>
+            <button onclick="buttonFuncionalityRegisterPaymentMethod()">Registrar método de pago</button>
         </div>
     </header>
     <div class="content">
-        <div class="tab-control">
-            <button class="tab-button active" onclick="openTab(event, 'carrito')">Carrito</button>
-            <button class="tab-button" onclick="openTab(event, 'pedidos')">Pedidos Solicitados</button>
-            <button class="tab-button" onclick="openTab(event, 'catalogo')">Catálogo de Productos</button>
-        </div>
-        <div id="carrito" class="tab-content">
-            <h2>Contenido del Carrito</h2>
-        </div>
-        <div id="pedidos" class="tab-content">
-            <h2>Pedidos Solicitados</h2>
-        </div>
-        <div id="catalogo" class="tab-content">
-            <h2>Catálogo de Productos</h2>
-        </div>
+        <form id="reportForm">
+            <div class="form-group">
+                <label for="descripcion">Descripción:</label>
+                <textarea id="descripcion" name="descripcion" rows="8" cols="80" required></textarea>
+            </div>
+            <div class="reporte-buttons">
+                <button onclick="">Reportar</button>
+                <button onclick="">Cancelar</button>
+            </div>
+        </form>
+        
     </div>
-    <script src="script.js"></script>
 </body>
 </html>
