--- a/Ventanas/StatementsRegister.html
+++ b/Ventanas/StatementsRegister.html
@@ -3,32 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <title>Main Dashboard</title>
-    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="stylesheet" href="../CSS/StatementsRGScript.css">
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="../JS/StatementsRegisterScript.js"></script>
 </head>
 <body>
     <header>
-        <h1>Abarrotes Cuevas</h1>
+        <img src="../resourses/logo_cuevas.png" alt="Logo de la empresa" class="logo">
         <div class="header-buttons">
-            <button class="profile-button">Perfil</button>
-            <button class="logout-button">Cerrar Sesión</button>
+            <div class="header-info">
+                <label id="user-label"></label>
+            </div>
+            <br>
+            <button onclick="buttonFuncionalityRegisteraddress()">Registrar dirección de entrega</button>
         </div>
     </header>
     <div class="content">
-        <div class="tab-control">
-            <button class="tab-button active" onclick="openTab(event, 'carrito')">Carrito</button>
-            <button class="tab-button" onclick="openTab(event, 'pedidos')">Pedidos Solicitados</button>
-            <button class="tab-button" onclick="openTab(event, 'catalogo')">Catálogo de Productos</button>
-        </div>
-        <div id="carrito" class="tab-content">
-            <h2>Contenido del Carrito</h2>
-        </div>
-        <div id="pedidos" class="tab-content">
-            <h2>Pedidos Solicitados</h2>
-        </div>
-        <div id="catalogo" class="tab-content">
-            <h2>Catálogo de Productos</h2>
+        <label for="stateText">Estado / Entidad federativa:</label>
+        <select id="stateText" required>
+            <option value="Veracruz" selected>Veracruz</option>
+        </select><br><br>
+
+        <label for="municipalityText">Municipio:</label>
+        <select id="municipalityText" required>
+            <option value="Xalapa" selected>Xalapa</option>
+        </select><br><br>
+
+        <label for="suburbText">Colonia:</label>
+        <input type="text" id="suburbText" required><br><br>
+
+        <label for="zipcodeNumber">Código postal:</label>
+        <select id="zipcodeNumber"></select><br><br>
+
+        <label for="streetText">Calle y número:</label>
+        <input type="text" id="streetText" required><br><br>
+
+        <div class="direccion-buttons">
+            <button onclick="">Registrar Dirección</button>
+            <button onclick="">Cancelar</button>
         </div>
     </div>
-    <script src="script.js"></script>
 </body>
 </html>
